Bug 776438 - Create new pref for the delimiter of a forwarded message. r=jcranmer, r=mkmelin, r=IanN